# octave-fits

./: DESCRIPTION  INDEX  Makefile  NEWS
inst/: fitsread.m  fitswrite.m  import_fits.m
src/: Makefile  Makefile.in  __fits__.cc  bootstrap  configure.ac  fits_constants.h  fitsinfo.cc  read_fits_image.cc  save_fits_image.cc  save_fits_image_multi_ext.cc
